# baxter_applications

./: CMakeLists.txt  README.md  baxter_xtion.cpp  envio_baxter-v1.cpp  envio_baxter-v2.cpp  envio_baxter.cpp  envio_baxter_onepint.cpp  envio_python.py  filtro_kinect.cpp  package.xml  package.xml~  publisher.cpp
cmake/: FindqpOASES.cmake
config/: baxter.rviz
data/: Data_1.bag  Data_2.bag  Data_3.bag  data_4.bag  data_5.bag  data_6.bag
include/baxter_cpp/: markers.hpp  robotSpecifics.h  tools.hpp
launch/: baxter_end_point.launch  l_baxter_cpp.launch
scripts/: mouse.py
src/: markers.cpp  tools.cpp
